update code of task

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
-Miranda Evans miranda.r.evans@gmail.com
-Kevin Yook kevin.yook@holbertonschool.com
 
-Farrukh Akhrarov farruh1996@gmail.com
-Laura Roudge laura.derohan@gmail.com
+# These individuals contributed to the hbnb project in this repository 
+
+Elmahdi Mamoun <mamounelmahdi1962@gmail.com>
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Gbodi Segun gbodisegun@gmail.com
+Stephen Adeyemo adeyemostephen@gmail.com
